Improves git instructions for parsci folks in README file.

--- a/README
+++ b/README
@@ -59,16 +59,17 @@ CCI_CONFIG=cci.ini dist/build/ex-pingpong/ex-pingpong -h ip://192.168.0.1:46188
 This procedure builds cci statically due to some issues we have
 when making ORNL CCI into a shared library.
 
-# Get ORNL CCI topic/verbs branch under the cci folder.
+# Get ORNL CCI 0.1a1 release.
 # For parsci folks, this can be achieved by issuing:
-git clone --branch topic/verbs git@git.assembla.com:cci-ornl.git cci
+git clone git@git.assembla.com:cci-ornl.git cci
+git checkout v0.1a1
 
 # For the rest of the world, you have to request a copy of the 0.1a1 release 
 # to ORNL:
 http://www.olcf.ornl.gov/center-projects/common-communication-interface/
 # or via the mailing list:
 http://lists.cci-forum.com/listinfo.cgi/cci-users-cci-forum.com
-
+# and then rename the uncompressed folder:
 tar -xzf cci-0.1a1.tar.gz
 mv cci-0.1a1 cci
 
